--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="box1 box">
                 <div class="box-content">
                      <h2>Deals in PCs</h2>
-                     <div class="box-image" style="background-image:url('/Project Photos/clone box1 image.jpg')"></div>
+                     <div class="box-image" style="background-image:url('clone box1 image.jpg')"></div>
                      <a href="#">shop now</a>
                 </div>
             </div>
@@ -94,7 +94,7 @@
             <div class="box2 box">
                 <div class="box-content">
                     <h2>Toys under $25</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box2 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box2 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -102,7 +102,7 @@
             <div class="box3 box">
                 <div class="box-content">
                     <h2>Home Decor under $50</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box3 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box3 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -110,7 +110,7 @@
             <div class="box4 box">
                 <div class="box-content">
                     <h2>Player's paradise</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box4 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('clone box4 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -126,7 +126,7 @@
             <div class="box6 box">
                 <div class="box-content">
                     <h2>Personal Care under $25</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box6 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('clone box6 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -134,7 +134,7 @@
             <div class="box7 box">
                 <div class="box-content">
                     <h2>Indoor Plants| 50% off</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box7 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box7 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -142,7 +142,7 @@
             <div class="box9 box">
                 <div class="box-content">
                     <h2>Stop activity trackers</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box8 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('clone box8 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -158,7 +158,7 @@
             <div class="box10 box">
                 <div class="box-content">
                     <h2>Cars & Bikes parts</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box10 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box10 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -166,7 +166,7 @@
             <div class="box11 box">
                 <div class="box-content">
                     <h2>Start your fitness journey</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box11 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box11 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -174,7 +174,7 @@
             <div class="box12 box">
                 <div class="box-content">
                     <h2>Deals on shoes</h2>
-                    <div class="box-image" style="background-image:url('/Project Photos/clone box12 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box12 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
