--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="box1 box">
                 <div class="box-content">
                      <h2>Deals in PCs</h2>
-                     <div class="box-image" style="background-image:url('clone box1 image.jpg')"></div>
+                     <div class="box-image" style="background-image:url('/clone box1 image.jpg')"></div>
                      <a href="#">shop now</a>
                 </div>
             </div>
@@ -110,7 +110,7 @@
             <div class="box4 box">
                 <div class="box-content">
                     <h2>Player's paradise</h2>
-                    <div class="box-image" style="background-image:url('clone box4 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box4 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -126,7 +126,7 @@
             <div class="box6 box">
                 <div class="box-content">
                     <h2>Personal Care under $25</h2>
-                    <div class="box-image" style="background-image:url('clone box6 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box6 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
@@ -142,7 +142,7 @@
             <div class="box9 box">
                 <div class="box-content">
                     <h2>Stop activity trackers</h2>
-                    <div class="box-image" style="background-image:url('clone box8 image.jpg')"></div>
+                    <div class="box-image" style="background-image:url('/clone box8 image.jpg')"></div>
                     <a href="#">shop now</a>
                </div>
             </div>
